fix(sbb-container, sbb-tab-group): avoid reserving invisible space (#2921)
Closes #2835

--- a/src/elements/core/styles/mixins/helpers.scss
+++ b/src/elements/core/styles/mixins/helpers.scss
@@ -41,6 +41,7 @@
     display: block;
     visibility: hidden;
     height: 0;
+    overflow: hidden;
   }
 }
 
